# glyphmotion

./: .gitattributes  .gitignore  NOTICE  README.md  THIRD_PARTY_NOTICES.md  build_msi.cmd  convert.cmd  convert.ps1  pyproject.toml  run_gui.cmd  run_gui.ps1
ascii_oneclick/: __init__.py  cli.py  core.py  exporters.py  formats.py  gui.py  presets.py  theme.py
packaging/: GlyphMotion.wxs  build_windows.ps1  glyphmotion_gui.py
tests/: run_tests.py  smoke.py  test_cli.py  test_exports.py  test_gui_app.py  test_gui_worker.py  test_presets.py  test_render_modes.py
