[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glyphmotion"
version = "0.4.0"
description = "Convert images, GIFs, and videos into character-art animations."
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
dependencies = [
  "pillow>=12.0",
]
keywords = ["ascii-art", "character-art", "gif", "video", "animation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Video",
]

[project.scripts]
glyphmotion = "ascii_oneclick.cli:main"
glyphmotion-gui = "ascii_oneclick.gui:main"

[tool.setuptools.packages.find]
include = ["ascii_oneclick*"]

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]
